--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="https://www.camptogo.com/static/img/favicon.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>营探</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="https://www.camptogo.com/static/img/favicon.png" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>营探</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
+
+<style>
+::-webkit-scrollbar {
+  display: none;
+}
+</style>
